--- a/app/src/main/res/layout/news_details_fragment.xml
+++ b/app/src/main/res/layout/news_details_fragment.xml
@@ -33,7 +33,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@tools:sample/full_names[0]"
             app:layout_constraintStart_toStartOf="@+id/title_textView"
             app:layout_constraintTop_toBottomOf="@+id/title_textView"
             tools:text="@tools:sample/full_names" />
@@ -59,7 +58,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:text="@tools:sample/lorem/random[0]"
+            android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/details_imageView"
