adding binding adapter, writting a test function from remote data and populate UI

--- a/app/src/main/res/layout/list_news_item_card.xml
+++ b/app/src/main/res/layout/list_news_item_card.xml
@@ -18,11 +18,13 @@
         android:layout_width="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:onClick="@{() -> clickListener.onClick(news)}"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/card_imageView"
+                app:imageUrl="@{news.urlToImage}"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_marginStart="16dp"
@@ -37,11 +39,14 @@
 
             <TextView
                 android:id="@+id/title_card_textView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                android:text="@{news.title}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/card_imageView"
                 app:layout_constraintTop_toBottomOf="@+id/card_imageView"
                 tools:text="Corona virus is a problem for countries" />
 
