--- a/app/src/main/res/drawable/sport_shape.xml
+++ b/app/src/main/res/drawable/sport_shape.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#FFC107"/>
+            <solid android:color="@color/colorAccent"/>
         </shape>
     </item>
     <item
