--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -19,12 +19,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:defaultNavHost="true"
-                app:navGraph="@navigation/nav_graph" />
+                app:navGraph="@navigation/nav_graph"
+                tools:ignore="FragmentTagUsage" />
 
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navView"
+            app:headerLayout="@layout/nav_header"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
