--- a/app/src/main/res/layout/list_news_item_card.xml
+++ b/app/src/main/res/layout/list_news_item_card.xml
@@ -14,6 +14,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:layout_margin="16dp"
         android:layout_height="300dp"
         android:layout_width="match_parent">
 
