--- a/app/src/main/res/layout/news_fragment.xml
+++ b/app/src/main/res/layout/news_fragment.xml
@@ -15,10 +15,6 @@
             android:id="@+id/news_rv"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto"
             android:text="@string/general_label"
             app:layout_constraintEnd_toEndOf="@+id/general_icon"
             app:layout_constraintStart_toStartOf="@+id/general_icon"
@@ -93,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto"
             android:text="@string/business_label"
             app:layout_constraintEnd_toEndOf="@+id/business_icon"
             app:layout_constraintStart_toStartOf="@+id/business_icon"
@@ -103,6 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto"
             android:text="@string/sports_label"
             app:layout_constraintEnd_toEndOf="@+id/sport_icon"
             app:layout_constraintStart_toStartOf="@+id/sport_icon"
@@ -113,6 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto"
             android:text="@string/technology_label"
             app:layout_constraintEnd_toEndOf="@+id/tech_icon"
             app:layout_constraintStart_toStartOf="@+id/tech_icon"
@@ -122,9 +122,11 @@
             android:id="@+id/top_headlines_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="18dp"
+            android:fontFamily="@font/questrial"
             android:text="@string/top_headlines_label"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/general_icon"
             app:layout_constraintTop_toBottomOf="@+id/general_label" />
 
